[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.86.0",
    "google-generativeai>=0.8.3",
    "langchain-openai>=0.2.12",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pyowm>=3.3.0",
    "python-dotenv>=1.0.1",
    "unstructured>=0.14.8",
]
